--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -275,3 +275,7 @@
       link: https://zhaoxiaobin.net
       avatar: https://zhaoxiaobin.coding.net/p/blog/d/zhaoxiaobin_img/git/raw/master/static/avatar.png
       descr: 个人技术博客
+    - name: SaraKale’s blog
+      link: https://sarakale.netlify.app/blog
+      avatar: https://cdn.jsdelivr.net/gh/SaraKale/blogimg@0.1/sarakale.jpg
+      descr: 日常生活向博客
